samples/_failures_safe/1761317426_615d28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b252e2b6.c: In function ‘main’:
./samples/SAFE/__tmp_b252e2b6.c:171:19: error: expected ‘)’ at end of input
  171 |         if (result
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_b252e2b6.c:171:9: error: expected declaration or statement at end of input
  171 |         if (result
      |         ^~
./samples/SAFE/__tmp_b252e2b6.c:171:9: error: expected declaration or statement at end of input
